why do web development section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,58 @@
         </section>
     </header>
 
-    
+    <main>
+
+        <section id="why-web-development">
+            <div class="development-content">
+                <div class="development-heading">
+                    <h1>
+                        Why Web Development??
+                    </h1>
+                    <p>
+                        Each distinct day gives an opportunity to learn, progress, and do the things that push you 
+                        towards your goals or that make you satisfied at the end of the day. With this, if you want
+                         to step into the world of coding or more specifically, web development.
+                    </p>
+                </div>
+
+                <div class="do-in-development">
+
+                    <div class="left-content1">
+                        <h1>
+                            I will Do Coding and Change The World
+                        </h1>
+                        <p>
+                            People who want a creative career path may enjoy web development.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div class="right-content1">
+                        <img src="assets/why-development-1.png" alt="why do i coding">
+                    </div>
+
+
+                    <div class="left-content2">
+                        <h1>
+                            I will Do Coding and Change The World
+                        </h1>
+                        <p>
+                            People who want a creative career path may enjoy web development.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div class="right-content2">
+                        <img src="assets/why-development-1.png" alt="why do i coding">
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section>
+
+    </main>
+
 
     <footer>
 
