--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
             </div>
         </section>
 
+        <section id="my-inspiration">
+            <div class="inspiration-title">
+                <h1>
+                    My Inspiration
+                </h1>
+                <h3>
+                    One of the most significant advantages of learning to code is that it is a challenging and constantly evolving trade. As you continue to code, you'll realize that there is always something more to learn. 
+                </h3>
+            </div>
+
+            <div class="inspiration-video">
+                <iframe src="https://www.youtube.com/embed/DGHn2uOAVCE?si=mnGUGHxs0JgBuKpW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
 
 
