current target section added

--- a/index.html
+++ b/index.html
@@ -90,6 +90,37 @@
                 <iframe src="https://www.youtube.com/embed/DGHn2uOAVCE?si=mnGUGHxs0JgBuKpW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
+
+        <section id="current-target">
+            <div class="ct-title">
+                <h1>
+                    My Current Target
+                </h1>
+                <p>
+                    The goal of front-end development is to create a website's user interface and visual components that users may interact with directly.
+                </p>
+            </div>
+            <div class="ct-content">
+                <div class="html ct-body">
+                    <img src="assets/html.png" alt="html logo">
+                    <h2>HTML</h2>
+                    <p>HTML is the standard markup language for web documents designe.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="css ct-body">
+                    <img src="assets/css.png" alt="css logo">
+                    <h2>CSS</h2>
+                    <p>CSS is a computer language for laying out and structuring web pages.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="JavaScript ct-body">
+                    <img src="assets/js.png" alt="js logo">
+                    <h2>JavaScript</h2>
+                    <p>JavaScript is a scripting language used to develop web pages.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </section>
     </main>
 
 
