support section added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Web) or an intranet (a private network). Web development can range from developing a 
                     simple single static page of plain text to complex web applications.
                 </p>
-                <button><a href="#contact">Contact with me</a></button>
+                <button><a href="#support">Contact with me</a></button>
             </div>
         </section>
     </header>
@@ -50,26 +50,14 @@
                         <p>
                             People who want a creative career path may enjoy web development.
                         </p>
-                        <a href="#">Learn More</a>
+                        <a href="">Learn More</a>
                     </div>
                     <div class="right-content1">
                         <img src="assets/why-development-1.png" alt="why do i coding">
                     </div>
 
 
-                    <div class="left-content2">
-                        <h1>
-                            I will Do Coding and Change The World
-                        </h1>
-                        <p>
-                            People who want a creative career path may enjoy web development.
-                        </p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="right-content2">
-                        <img src="assets/why-development-1.png" alt="why do i coding">
-                    </div>
-
+                    
 
 
                 </div>
@@ -121,12 +109,27 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- support section -->
+
+        <section id="support">
+            <div class="support-content">
+                <h3>
+                    I need Support
+                </h3>
+                <p>
+                    To agree with and give encouragement to someone or something because you want him, her, or it to succeed.
+                </p>
+                <input type="text" placeholder="Suggest me any feedback for me">
+                <button>Submit</button>
+            </div>
+        </section>
+
     </main>
 
 
-    <footer>
-
-    </footer>
+   
     
 </body>
 </html>
